notepadpp 7.7.1-7:
	* fixed Nested Switch Statement
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-05 14:36:58 +0200

notepadpp 7.7.1-6:
	* deferring action if running instance is found (no success/error, keep action_request unchanged)
	* for language=auto (use sytem language) handle other values than 0409 and 0407 -> defaults to english
	* detect testing stage even if package has no matching prefix
	* for distinction: explicit comment in logs for TESTING / RELEASE package
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-05 13:13:20 +0200

notepadpp 7.7.1-5:
	* Reaktivierung Feature lokales Logo (gem. o4i-Richtlinie)
	-- Thomas Besser (archIT/KIT) <thomas.besser@kit.edu>, 05.07.2019

notepadpp 7.7.1-4:
	* variable $PathToExe$ is back
	* warning on unexpected previous install directory is now comment
	* property link_desktop renamed to desktop-link
	* documentation updated
	* added changelog from previous code base
	* adjusted description in control (en/de)
	* pystache: use UTF-8 encoding
	* fixed extraction of language files
	* control: URLs moved from description to advice
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-03 13:42:22 +0200
	
notepadpp 7.7.1-3:
	* fixed property names and scripts for custom scripts
	* Makefile: new default for ALLINC is true
	* extraction of language files from installer
	* new icon for application configuration
	* updated 7z binaries
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-01 16:23:46 +0200

notepadpp 7.7.1-2:
	* product update --> 7.7.1
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-06-20 06:56:55 +0200

notepadpp 7.7-2:
	* product update --> 7.7
	* complete revision of package (ready for o4i)
	-- J. Boettge <boettge@mpi-halle.mpg.de>  2019-05-21 09:01:26 +0200


# Changelog from previous code base:

notepadpp (7.7-060)
	* minor update, only .exe changed
 -- Detlef Krummel <krummel@gei.de>  20.5.2019
 
notepadpp (7.6.6-059)
	* minor update, only .exe changed
 -- Detlef Krummel <krummel@gei.de>  4.4.2019
 